fix text overflow bug

--- a/src/stylesheets/partials/_worksection.scss
+++ b/src/stylesheets/partials/_worksection.scss
@@ -75,6 +75,8 @@
                 line-height: normal;
                 letter-spacing: normal;
                 color: $grey;
+                width: -webkit-fill-available;
+                word-wrap: break-word;
             }
             
             p {
